--- a/src/main.scss
+++ b/src/main.scss
@@ -98,3 +98,11 @@ button {
     scroll-behavior: auto !important;
   }
 }
+
+body {
+  width: 50vw;
+  height: 100vh;
+  margin: 10vh auto 0;
+  display: flex;
+  flex-direction: column;
+}
